Beta V-1.2
- BUG Fix
- Register Fix